# biv-me

./: .gitignore  .gitmodules  Error.py  GPDataSet.py  GTSTG_x.txt  GTSTG_y.txt  GTSTG_z.txt  README.md  ReadMe.html  biventricularModel.py  environment.yml  fit_biventricular_geometry.py  functions.py  main_Hao.py  model.txt  modelHao.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: linux.yml  macos.yml  tests.yml  windows.yml
BiVFitting/: BiventricularModel.py  Diffeomorphic_fitting.py  GPDataSet.py  fitting_tools.py
CT_data/: GPFile.txt
TestHao/: AKL_control_mesh.txt  GPFile.txt  GPFileAKL.txt  model_aor.stl  model_lv_endo.stl  model_lv_epi.stl  model_mit.stl  model_rv_epi.stl  model_rv_fw.stl  model_rv_spt.stl
bivme/analysis/: DeleteOutliers.py  Mass_volume.py  ModifyExistingCsv.py  README.md  compute_circum_global_strain.py  compute_global_longitudinal_strain.py
bivme/fitting/: BiventricularModel.py  Diffeomorphic_fitting.py  Frame.py  GPDataSet.py  config_params.py  perform_fit.py  surface_enum.py
bivme/meshing/: mesh.py
bivme/plotting/: Plot_GuidePoints_html.py  Plot_html.py  Split_Model_Files.py  guidepoints_html.py  vtk.py
bivme/preprocessing/: Contours.py  extract_dicom_metadata.py  utils.py  (+2 more)
docs/: BiventricularModel.html  fitting_tools.html  surface_enum.html
test/: tests.py
test_data/: GPFile.txt  SliceInfoFile.txt  coarse_matrics_cs.npy  model.stl  pose_fitted_model.html
tests/: __init__.py  test_BiventricularModel.py  test_analysis.py  test_fitting.py  test_meshing.py  test_preprocessing.py
(+273 files in other folders)
