[metadata]
name = bivme
description = Biventricular fitting code
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages =
    bivme
install_requires = file: requirements.txt
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.package_data]
bivme = py.typed

[flake8]
max-line-length = 160